# logbox

./: .gitignore  README.md  pyproject.toml
logbox/: __main__.py  config.py  formatting.py  framing.py  logmessage_pb2.py  logmessage_pb2.pyi  output.py  server.py
proto/: logmessage.proto
scripts/: client.py
tests/: test_formatting.py  test_framing.py  test_main.py  test_output.py  test_server.py
