[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "logbox"
version = "0.1.0"
description = "TCP server that receives length-prefixed protobuf log messages and writes them to stdout"
requires-python = ">=3.11"
dependencies = ["protobuf==7.35.1"]

[project.optional-dependencies]
dev = ["mypy", "types-protobuf"]

[project.scripts]
logbox = "logbox.__main__:main"

[tool.setuptools]
packages = ["logbox"]
